--- a/ENC.csproj
+++ b/ENC.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -168,8 +171,13 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DownloadDataController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ReceiverController.cs" />
+    <Compile Include="Controllers\SenderController.cs" />
+    <Compile Include="Controllers\SRAllocationController.cs" />
+    <Compile Include="DBModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -183,6 +191,10 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="tbl_datakey.cs" />
+    <Compile Include="tbl_receiverinfo.cs" />
+    <Compile Include="tbl_senderinfo.cs" />
+    <Compile Include="tbl_SR_allocation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -240,6 +252,27 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Sender\Create.cshtml" />
+    <Content Include="Views\Sender\Delete.cshtml" />
+    <Content Include="Views\Sender\Details.cshtml" />
+    <Content Include="Views\Sender\Edit.cshtml" />
+    <Content Include="Views\Sender\Index.cshtml" />
+    <Content Include="Views\Sender\UploadFile.cshtml" />
+    <Content Include="Views\Receiver\Create.cshtml" />
+    <Content Include="Views\Receiver\Delete.cshtml" />
+    <Content Include="Views\Receiver\Details.cshtml" />
+    <Content Include="Views\Receiver\Edit.cshtml" />
+    <Content Include="Views\Receiver\Index.cshtml" />
+    <Content Include="Views\SRAllocation\Create.cshtml" />
+    <Content Include="Views\SRAllocation\Delete.cshtml" />
+    <Content Include="Views\SRAllocation\Details.cshtml" />
+    <Content Include="Views\SRAllocation\Edit.cshtml" />
+    <Content Include="Views\SRAllocation\Index.cshtml" />
+    <Content Include="Views\DownloadData\Create.cshtml" />
+    <Content Include="Views\DownloadData\Delete.cshtml" />
+    <Content Include="Views\DownloadData\Details.cshtml" />
+    <Content Include="Views\DownloadData\Edit.cshtml" />
+    <Content Include="Views\DownloadData\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
