--- a/ENC.csproj
+++ b/ENC.csproj
@@ -187,6 +187,7 @@
     <Compile Include="LogicFolder\ReceiverInfo.cs" />
     <Compile Include="LogicFolder\ValidateData.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\DownloadDataModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
