--- a/packages.config
+++ b/packages.config
@@ -14,7 +14,11 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net472" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net472" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net472" />
@@ -29,5 +33,11 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net472" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net472" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net472" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net472" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
+  <package id="WindowsAzure.Storage" version="8.1.1" targetFramework="net472" />
 </packages>
