--- a/packages.config
+++ b/packages.config
@@ -33,6 +33,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net472" />
   <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net472" />
   <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net472" />
