changes to improve algorithm

--- a/Web.config
+++ b/Web.config
@@ -27,7 +27,8 @@
 	<add key="CycladeUserName" value="user" />
 	<add key="CycladeHost" value="4X1EXOAjhQ" />
 	<add key="CycladePassword" value="snf-53821.vm.okeanos-global.grnet.gr" />
-	<add key ="" value=""/>
+	<add key ="DataKeyNumber" value="30"/>
+	<add key ="DefaultMValue" value="72651439875308362782618792618293"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
