--- a/Web.config
+++ b/Web.config
@@ -15,30 +15,27 @@
 		</builders>
 	</configBuilders>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="" />
-		<add name="DBModel" connectionString="" />
-		<!--<add name="DefaultConnection" connectionString="" />  -->
-		<!-- <add name="DBModel" connectionString="" />-->
-		<!--<add name="Model1" connectionString="" />-->
-		<add name="AzureConn" connectionString="" />
+		<add name="DefaultConnection" connectionString="yourconnectionstring" />
+		<add name="DBModel" connectionString="yourconnectionstring" />
+		<add name="AzureConn" connectionString="yourconnectionstring" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="AWSProfileName" value="" />
-		<add key="AWSAccessKey" value="" />
-		<add key="AWSSecretKey" value="" />
-		<add key="AWSSessionToken" value="" />
-		<add key="BucketName" value="" />
-		<add key="CycladeUserName" value="" />
-		<add key="CycladeHost" value="" />
-		<add key="CycladePassword" value="" />
-		<add key="DataKeyNumber" value="" />
-		<add key="DefaultMValue" value="" />
-		<add key ="semailaddr" value=""/>
-		<add key="epassword" value=""/>
+		<add key="AWSProfileName" value="profilename" />
+		<add key="AWSAccessKey" value="accesskey" />
+		<add key="AWSSecretKey" value="secretkey" />
+		<add key="AWSSessionToken" value="sessiontoken" />
+		<add key="BucketName" value="bucketname" />
+		<add key="CycladeUserName" value="username" />
+		<add key="CycladeHost" value="hostname" />
+		<add key="CycladePassword" value="password" />
+		<add key="DataKeyNumber" value="datakeynumber" />
+		<add key="DefaultMValue" value="defaultvalue" />
+		<add key ="semailaddr" value="emailaddress"/>
+		<add key="epassword" value="password"/>
 	</appSettings>
 	<system.web>
 		<authentication mode="None" />
